--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  sqflite: ^0.12.2+1
+  path_provider: ^0.4.1
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
